--- a/template/pages/@/layout/footer.ejs
+++ b/template/pages/@/layout/footer.ejs
@@ -1,10 +1,49 @@
 <%
 // load footer options and contacts from content
+const apx_popup = _.cms('apx_popup') || {}
 const footer = _.cms('footer') || {}
 const contacts = _.cms('contacts') || {}
 const themeCustom = _.settings.theme.custom || ''
 %>
-
+<% if(apx_popup && apx_popup.image && apx_popup.title){ %>
+<div id="apx_popup">
+  <div class="modal fade" id="apx_popup-box" tabindex="-1"  aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <% if(apx_popup.image){ %>  
+            <div class="modal-image">
+              <img src="<%= apx_popup.image %>">
+            </div>
+            <% } %>
+            <div class="modal-body">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <% if(apx_popup.title){ %>  
+                <h5 class="modal-title"><%- apx_popup.title %></h5>
+                <% } if(apx_popup.description){ %>  
+                <p><%- apx_popup.description %></p>
+                <% } if(apx_popup.code){ %>  
+                  <%- apx_popup.code.code %>
+                <% } %>
+            </div>
+        </div>
+    </div>
+  </div>
+</div>
+<% } %>
+<% if (contacts.whatsapp) { %>   
+    <a
+      href="javascript:;"
+      target="_blank"
+      rel="noopener"
+      class="floating-whatsapp-link"
+      data-tel="<%= contacts.whatsapp.replace(/\D/g, '') %>"
+    >
+      <i class="i-whatsapp"></i>
+    </a>
+  
+<% } %>
 <footer class="footer py-3 py-lg-4 py-xl-5">
   <div class="container">
     <div class="row">
@@ -178,33 +217,18 @@ const themeCustom = _.settings.theme.custom || ''
     </div>
 
     <div class="footer__credits">
-      <span>
-        <%= footer.credits || `© ${_.store.name} / ${contacts.address} / ${contacts.doc_number}` %>
-      </span>
-      <% if (themeCustom === 'ecom-beauty') { %>
-        <div class="ecom-credits-container">
-          <div class="ecom-credits">
-            <a href="https://e-com.plus" target="_blank" rel="noopener">
-              <img
-                src="https://ecom.nyc3.cdn.digitaloceanspaces.com/storefront/ecom-credits-white.png"
-                alt="E-Com Plus"
-                width="125.42"
-                height="20"
-              >
-            </a>
+      <div class="p-0 w-100">
+        <div class="row align-items-center credits">
+          <div class="col-12 col-md">
+            <span>
+              <small>
+                <%- footer.credits || `© ${_.store.name} / ${contacts.address} / ${contacts.doc_number}` %>
+              </small>
+            </span>
           </div>
+          <div class="col-md-auto col-12"><%- await include('@/layout/inc/ecom-credits') %></div>
         </div>
-      <% } %>
-      <button
-        id="go-to-top"
-        class="btn btn-primary ml-3"
-        type="button"
-        aria-label="<%= _.dictionary('goToTop') %>"
-      >
-        <i class="i-chevron-up"></i>
-      </button>
+      </div>      
     </div>
   </div>  
 </footer>
-
-<%- await include('@/layout/inc/ecom-credits') %>
