--- a/template/scss/custom-css/_styles.scss
+++ b/template/scss/custom-css/_styles.scss
@@ -1,1 +1,222 @@
 // Add your custom CSS here.
+
+.font-weight-bold{font-weight: bold;}
+.font-weight-800{font-weight: 800;}
+.font-weight-700{font-weight: 700;}
+.font-weight-600{font-weight: 600;}
+.font-weight-500{font-weight: 500;}
+.font-weight-normal{font-weight: normal;}
+.font-weight-300{font-weight: 300;}
+
+.align-items-center{align-items: center;}
+.align-items-end{align-items: flex-end;}
+.justify-content-center{justify-content: center;}
+.justify-content-end{justify-content: flex-end;}
+.justify-content-between{justify-content: space-between;}
+
+/* Direção de flexbox como linha em todos os dispositivos */
+.flex-row {
+  flex-direction: row !important;
+}
+
+/* Direção de flexbox como coluna em todos os dispositivos */
+.flex-column {
+  flex-direction: column !important;
+}
+
+/* Direção de flexbox como linha em dispositivos de tamanho médio e maiores */
+@media (min-width: 768px) {
+  .flex-md-row {
+      flex-direction: row !important;
+  }
+}
+
+/* Direção de flexbox como coluna em dispositivos menores que o tamanho médio */
+@media (max-width: 767.98px) {
+  .flex-md-column {
+      flex-direction: column !important;
+  }
+}
+.w-100{width: 100%;}
+main ~ iframe{display: none;}
+
+.container{max-width: 100%;width: 1320px;}
+
+
+#apx_popup{
+  .modal-dialog{
+    width: 700px;
+    max-width: 80%;
+    margin: 2rem auto;
+  }
+  .modal-content {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+  }
+  .modal-title{
+    color: var(--c1);
+    font-size: var(--h3);
+    padding: 0;
+    font-family: "Young Serif", serif;
+  }
+  .modal-image {
+      width: 50%;
+      background-size: cover;
+      background-position: center;
+      height: 100%;
+      img{width: 100%;}
+  }
+  .modal-body {
+      width: 50%;
+      padding: 5%;
+      text-align: center;
+      position: initial;
+      .close{line-height:10px;position: absolute;top: 1rem;right: 1rem;}
+      
+      h5{}
+      p{margin-bottom: 2rem;font-size:var(--font-size-sm)}
+      form{
+        button{
+          background: var(--c2);
+          color: #fff;
+          width: 100%;
+          display: block;
+          border: 0;
+        }
+      }
+      .form-group{
+        position: relative;
+        label{
+          font-size: var(--smallest);
+          background: #fff;
+          left: calc(1rem - 5px);
+          top: -7px;
+          padding: 0 5px;
+          color: #666;
+          position: absolute;      
+        }  
+        input{
+          font-size: 14px;
+          padding: 1.5rem 1rem;
+          
+        }
+        
+      }
+  }
+}
+@media(max-width:990px){
+  #apx_popup{
+    .modal-content{
+      width: 100%;
+      flex-direction: column;
+      .modal-image{
+        width:100%;
+        img{
+          width: 100%;
+          max-height: 30vh;
+          object-fit: cover;
+        }
+      }
+      .modal-body{width: 100%;padding:10%}
+    }
+  }
+}
+
+@keyframes scroll {
+  0% {
+      transform: translateX(0)
+  }
+
+  to {
+      transform: translateX(calc(-100% - 1.2rem))
+  }
+}
+.apx_banners-stripe-box.animate_flex_true{
+  display: flex;
+  flex-direction: row;
+}
+.apx_banners-stripe.animate_true{
+  animation: scroll 25s linear infinite;
+  align-items: center;
+  display: flex;
+  flex-shrink: 0;
+  
+  justify-content: space-around;
+  margin: 0 auto;
+  max-width: 1368px;
+  min-width: 100%;
+  will-change: transform;
+}
+.apx_banners-stripe-box:hover .apx_banners-stripe.animate_true{
+  animation-play-state: paused;
+}
+.apx_banners-stripe{
+  gap: 2rem;
+  justify-content: space-between;
+  > .item{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    > div:last-child{
+      display: flex;
+      flex-direction: column;
+      strong{
+        font-family: "Young Serif", serif;
+        color: var(--c1);
+        line-height: initial;
+        font-size: var(--h5);
+        font-weight: normal;
+      }
+      span{font-size: var(--font-size-sm);}
+    }
+  }
+  *{text-decoration: none;cursor:default}
+}
+
+
+.floating-whatsapp-link{
+  position: fixed;
+  bottom: 7rem;
+  right: 1rem;
+  align-items: center;
+  background: #18d940;
+  border-radius: 50%;
+  box-shadow: 0 4px 15px #00000026;
+  display: flex;
+  height: 64px;
+  justify-content: center;
+  opacity: 1;
+  padding: 0;
+  width: 64px;
+  z-index:999999999;
+  i{
+    font-size: 36px;
+    color: #fff;
+  }
+}
+
+@media(max-width:990px){
+  .floating-whatsapp-link{
+    height: 36px;
+    width: 36px;
+    bottom: 3rem;
+    i{font-size:20px}
+  }
+}
+
+footer.footer{
+  .credits{
+    *{
+        color: #4f4f4f;
+        font-size: var(--smallest);
+    }
+    .ecom-credits{
+        background: transparent;
+        padding: 0;
+    }
+    img{height: 16px;}
+  }
+  .footer__credits{padding: 1.5rem 0;border: 0;}
+  .footer__credits a{display: flex;align-items: center;gap: .5rem;}
+}
