--- a/template/pages/@/layout/inc/logo.ejs
+++ b/template/pages/@/layout/inc/logo.ejs
@@ -9,7 +9,7 @@ if (logo && logo.url) {
   %>
   <img
     id="logo"
-    class="header__logo"
+    class="header__logo my-md-2"
     src="<%= logo.url %>"
     alt="<%= logo.alt %>"
     <% if (width) { %>
