--- a/template/pages/@/sections/inc/products-carousel.ejs
+++ b/template/pages/@/sections/inc/products-carousel.ejs
@@ -26,61 +26,71 @@
     <% } %>
     data-title="<%= title %>"
   >
-    <% if (!opt.headless) { %>
-      <h4 class="products-carousel__title">
-        <% if (opt.title || opt.collection) { %>
-          <% if (link) { %>
-            <a href="<%= link %>">
+    <div class="container-fluid">
+      <% if (!opt.headless) { %>
+        <h4 class="products-carousel__title">
+          <% if (opt.title || opt.collection) { %>
+            <% if (link) { %>
+              <a href="<%= link %>">
+                <%= title %>
+              </a>
+            <% } else { %>
+              <span><%= title %></span>
+            <% } %>
+          <% } else { %>
+            <a href="/search">
               <%= title %>
             </a>
-          <% } else { %>
-            <span><%= title %></span>
           <% } %>
-        <% } else { %>
-          <a href="/search">
-            <%= title %>
-          </a>
-        <% } %>
-      </h4>
-    <% } %>
+        </h4>
+      <% } %>
 
-    <div
-      class="glide"
-      data-wait-mutation="true"
-      data-autoplay="<%= opt.autoplay %>"
-      data-per-view="4"
-      data-per-view-md="3"
-      data-per-view-sm="2"
-    >
-      <div class="glide__track" data-glide-el="track">
-        <ul class="glide__slides products-carousel__list">
-          <% for (let i = 0; i < opt.items.length; i++) { %>
-            <li class="glide__slide products-carousel__item">
-              <%- await include('@/sections/inc/product-item', {
-                _, opt: { item: opt.items[i] }
-              }) %>
-            </li>
-          <% } %>
-        </ul>
+      <div
+        class="glide"
+        data-wait-mutation="true"
+        data-autoplay="<%= opt.autoplay %>"
+        data-per-view="4"
+        data-per-view-md="3"
+        data-per-view-sm="2"
+      >
+        <div class="glide__track" data-glide-el="track">
+          <ul class="glide__slides products-carousel__list">
+            <% for (let i = 0; i < opt.items.length; i++) { %>
+              <li class="glide__slide products-carousel__item">
+                <%- await include('@/sections/inc/product-item', {
+                  _, opt: { item: opt.items[i] }
+                }) %>
+              </li>
+            <% } %>
+          </ul>
 
-        <div
-          class="glide__arrows glide__arrows--outer"
-          data-glide-el="controls"
-        >
-          <button
-            class="btn glide__arrow glide__arrow--left"
-            data-glide-dir="<"
-            aria-label="<%= _.dictionary('previous') %>"
+          <div
+            class="glide__arrows glide__arrows--outer"
+            data-glide-el="controls"
           >
-            <i class="i-chevron-left"></i>
-          </button>
-          <button
-            class="btn glide__arrow glide__arrow--right"
-            data-glide-dir=">"
-            aria-label="<%= _.dictionary('next') %>"
-          >
-            <i class="i-chevron-right"></i>
-          </button>
+            <button
+              class="btn glide__arrow glide__arrow--left"
+              data-glide-dir="<"
+              aria-label="<%= _.dictionary('previous') %>"
+            >
+              
+              <svg width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M31.25 37.5L18.75 25L31.25 12.5" stroke="black" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+  
+            </button>
+            <button
+              class="btn glide__arrow glide__arrow--right"
+              data-glide-dir=">"
+              aria-label="<%= _.dictionary('next') %>"
+            >
+              
+              <svg width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M18.75 37.5L31.25 25L18.75 12.5" stroke="black" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+  
+            </button>
+          </div>
         </div>
       </div>
     </div>
