--- a/template/pages/@/layout/footer.ejs
+++ b/template/pages/@/layout/footer.ejs
@@ -34,33 +34,31 @@ const themeCustom = _.settings.theme.custom || ''
 <% } %>
 <% if (contacts.whatsapp) { %>   
     <a
-      href="javascript:;"
+      href="https://wa.me/55<%= contacts.whatsapp.replace(/\D/g, '') %>"
       target="_blank"
       rel="noopener"
       class="floating-whatsapp-link"
-      data-tel="<%= contacts.whatsapp.replace(/\D/g, '') %>"
     >
       <i class="i-whatsapp"></i>
     </a>
   
 <% } %>
-<footer class="footer py-3 py-lg-4 py-xl-5">
+<footer class="footer">
+  
   <div class="container">
     <div class="row">
-      <div class="col-12 col-lg-auto order-<%= themeCustom === 'ecom-beauty' ? '' : 'lg-'%>last pl-xl-4">
+      <div class="col-12 col-lg-3 order-lg-first order-last mt-md-0 mt-4">
         <div class="footer__contacts">
-          <% if (footer.contacts.title) { %>
-            <div class="footer__title">
-              <%= footer.contacts.title %>
-            </div>
-          <% } %>
+          <div class="mb-4 d-md-block d-none">
+          <%- await include('@/layout/inc/logo', { _ }) %>
+          </div>
 
           <ul class="list-unstyled">
             <% if (footer.contacts.phone_wpp) { %>
               <% if (contacts.whatsapp) { %>
                 <li>
                   <span class="footer__list-icon">
-                    <i class="i-whatsapp"></i>
+                    <img src="./assets/footer_whatsapp.svg"/>
                   </span>
                   <a
                     href="javascript:;"
@@ -69,20 +67,22 @@ const themeCustom = _.settings.theme.custom || ''
                     class="whatsapp-link"
                     data-tel="<%= contacts.whatsapp.replace(/\D/g, '') %>"
                   >
+                    <small>Whatsapp</small>
                     <%= contacts.whatsapp %>
                   </a>
                 </li>
-              <% } %>
+              <% } %> 
               <% if (contacts.phone) { %>
                 <li>
                   <span class="footer__list-icon">
-                    <i class="i-phone"></i>
+                    <img src="./assets/footer_phone.svg"/>
                   </span>
                   <a
                     href="tel:+<%= contacts.phone.replace(/\D/g, '') %>"
                     target="_blank"
                     rel="noopener"
                   >
+                    <small>Telefone</small>
                     <%= contacts.phone %>
                   </a>
                 </li>
@@ -90,143 +90,194 @@ const themeCustom = _.settings.theme.custom || ''
             <% } %>
             <% if (footer.contacts.email) { %>
               <li>
+                <span class="footer__list-icon">
+                  <img src="./assets/footer_mail.svg"/>
+                </span>
                 <a href="mailto:<%= contacts.email %>" target="_blank" rel="noopener">
+                  <small>E-mail</small>
                   <%= contacts.email %>
                 </a>
               </li>
             <% } %>
             <% if (footer.contacts.address) { %>
-              <li>
+              <li class="d-md-flex d-none">
+                <span class="footer__list-icon">
+                  <img src="./assets/footer_address.svg"/>
+                </span>
                 <address>
-                  <%= contacts.address %>
+                  <small>Endereço</small>
+                  <%- contacts.address %>
                 </address>
               </li>
             <% } %>
+            <li>
+              <span class="footer__list-icon">
+                <img src="./assets/footer_clock.svg"/>
+              </span>
+              <p>
+                <small>Atendimento</small>
+                Seg. à Sáb. das 8h às 20h (Exceto Feriados)
+              </p>
+            </li>
           </ul>
 
-          <% if (footer.contacts.socials) { %>
-            <p class="footer__social">
-              <%- await include('@/layout/inc/networks', { _, contacts }) %>
-            </p>
-          <% } %>
+          
         </div>
       </div>
-
-      <% if (footer.links_1.list_pages || footer.links_1.list.find(({ url }) => url)) { %>
-        <div class="col-12 col-sm-6 col-lg col-xl-auto px-xl-4">
-          <a
-            class="footer__title"
-            data-toggle="collapse"
-            href="#footer-pages"
-            role="button"
-            aria-expanded="false"
-            aria-controls="footer-pages"
-          >
-            <%= footer.links_1.title || _.dictionary('pages') %>
-          </a>
-          <div class="collapse" id="footer-pages">
-            <% if (footer.links_1.list_pages) { %>
-              <ul class="footer__links">
-                <% (_.cms('pages') || []).forEach(slug => { %>
-                  <% const { title } = _.cms(`pages/${slug}`) %>
-                  <li>
-                    <i class="i-chevron-right"></i>
-                    <a href="/pages/<%= slug %>">
-                      <%= title %>
-                    </a>
-                  </li>
-                <% }) %>
-              </ul>
-            <% } else { %>
-              <ul class="footer__links">
-                <% footer.links_1.list.forEach(({ url, text }) => { %>
-                  <li>
-                    <i class="i-chevron-right"></i>
-                    <a href="<%= url %>">
-                      <%= text %>
-                    </a>
-                  </li>
-                <% }) %>
-              </ul>
-            <% } %>
-          </div>
-        </div>
-      <% } %>
-
-      <% if (footer.links_2.list_categories || footer.links_2.list.find(({ url }) => url)) { %>
-        <div class="col-12 col-sm-6 col-lg col-xl-auto px-xl-4">
-          <a
-            class="footer__title"
-            data-toggle="collapse"
-            href="#footer-categories"
-            role="button"
-            aria-expanded="false"
-            aria-controls="footer-categories"
-          >
-            <%= footer.links_2.title || _.dictionary('categories') %>
-          </a>
-          <div class="collapse" id="footer-categories">
-            <% if (footer.links_2.list_categories) { %>
-              <ul class="footer__links">
-                <% _.categories.forEach(({ name, slug, parent }) => { %>
-                  <% if (!parent) { %>
-                    <li>
-                      <i class="i-chevron-right"></i>
-                      <a href="/<%= slug %>">
-                        <%= name %>
-                      </a>
-                    </li>
+      <hr class="mt-1 d-md-none d-block">
+      <div class="col-12 col-md-8 offset-md-1">
+        <div class="row">
+          <% if (footer.links_1.list_pages || footer.links_1.list.find(({ url }) => url)) { %>
+            <div class="col-12 col-md">
+                <a
+                  class="footer__title"
+                  data-toggle="collapse"
+                  href="#footer-pages"
+                  role="button"
+                  aria-expanded="false"
+                  aria-controls="footer-pages"
+                >
+                  <%= footer.links_1.title || _.dictionary('pages') %>
+                  <button type="button" class="d-inline d-md-none">                    
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"><path d="M12 7V17M7 12L17 12" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg> 
+                  </button>
+                </a>
+                <div class="collapse" id="footer-pages">
+                  <% if (footer.links_1.list_pages) { %>
+                    <ul class="footer__links">
+                      <% (_.cms('pages') || []).forEach(slug => { %>
+                        <% const { title } = _.cms(`pages/${slug}`) %>
+                        <li>
+                          <i class="i-chevron-right"></i>
+                          <a href="/pages/<%= slug %>">
+                            <%= title %>
+                          </a>
+                        </li>
+                      <% }) %>
+                    </ul>
+                  <% } else { %>
+                    <ul class="footer__links">
+                      <% footer.links_1.list.forEach(({ url, text }) => { %>
+                        <li>
+                          <i class="i-chevron-right"></i>
+                          <a href="<%= url %>">
+                            <%= text %>
+                          </a>
+                        </li>
+                      <% }) %>
+                    </ul>
                   <% } %>
-                <% }) %>
-              </ul>
-            <% } else { %>
-              <ul class="footer__links">
-                <% footer.links_2.list.forEach(({ url, text }) => { %>
-                  <li>
-                    <i class="i-chevron-right"></i>
-                    <a href="<%= url %>">
-                      <%= text %>
-                    </a>
-                  </li>
-                <% }) %>
-              </ul>
+                </div>
+              </div>
             <% } %>
+      
+            <% if (footer.links_2.list_categories || footer.links_2.list.find(({ url }) => url)) { %>
+              <div class="col-12 col-md">
+                <a
+                  class="footer__title"
+                  data-toggle="collapse"
+                  href="#footer-categories"
+                  role="button"
+                  aria-expanded="false"
+                  aria-controls="footer-categories"
+                >
+                  <%= footer.links_2.title || _.dictionary('categories') %>
+                  <button type="button" class="d-inline d-md-none">                    
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"><path d="M12 7V17M7 12L17 12" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg>
+                  </button>
+                </a>
+                <div class="collapse" id="footer-categories">
+                  <% if (footer.links_2.list_categories) { %>
+                    <ul class="footer__links">
+                      <% _.categories.slice(0,3).forEach(({ name, slug, parent }) => { %>
+                        <% if (!parent) { %>
+                          <li>
+                            <i class="i-chevron-right"></i>
+                            <a href="/<%= slug %>">
+                              <%= name %>
+                            </a>
+                          </li>
+                        <% } %>
+                      <% }) %>
+                    </ul>
+                  <% } else { %>
+                    
+                    <ul class="footer__links">
+                      <% footer.links_2.list.forEach(({ url, text }) => { %>
+                        <li>
+                          <i class="i-chevron-right"></i>
+                          <a href="<%= url %>">
+                            <%= text %>
+                          </a>
+                        </li>
+                      <% }) %>
+                    </ul>
+                  <% } %>
+                </div>
+                <div class="mt-md-5 mt-3">
+                  <h5 class="footer__title">Redes Sociais</h5>
+                  <% if (footer.contacts.socials) { %>
+                    <p class="footer__social">
+                      <%- await include('@/layout/inc/networks', { _, contacts }) %>
+                    </p>
+                  <% } %> 
+                </div>
+              </div>
+            <% } %>
+      
+            <div class="col-12 col-md">
+              <div class="">
+                <a
+                  class="footer__title"
+                  data-toggle="collapse"
+                  href="#footer-payments"
+                  role="button"
+                  aria-expanded="false"
+                  aria-controls="footer-payments"
+                >Pagamento                
+                </a>
+                <p class="footer__payment-methods collapse" id="footer-payments">
+                  <span class="d-flex">
+                  <% Object.keys(footer.payment_methods).forEach(method => { %>
+                    <% if (footer.payment_methods[method]) { %>
+                      <span class="pay-icon_">
+                      <i class="pay-icon pay-icon--<%= method %>"></i>
+                      </span>
+                    <% } %>
+                  <% }) %>
+                  </span>
+                </p>
+                <a
+                  class="footer__title"
+                  data-toggle="collapse"
+                  href="#footer-security"
+                  role="button"
+                  aria-expanded="false"
+                  aria-controls="footer-security"
+                >Segurança
+                
+                </a>
+                <div class="footer__stamps collapse" id="footer-security">
+                  <%- await include(`@/sections/stamps`, { _, opt: { stamps: footer.stamps } }) %>
+                </div>
+              </div>
+            </div>
           </div>
-        </div>
-      <% } %>
-
-      <div class="col-12 col-xl order-<%= themeCustom === 'ecom-beauty' ? '' : 'lg-'%>first">
-        <h2 class="footer__title footer__store">
-          <%= footer.description.title || _.settings.name %>
-        </h2>
-        <p><%- footer.description.text || _.settings.description %></p>
-
-        <div class="mt-4 mb-3">
-          <p class="footer__payment-methods">
-            <% Object.keys(footer.payment_methods).forEach(method => { %>
-              <% if (footer.payment_methods[method]) { %>
-                <i class="pay-icon pay-icon--<%= method %>"></i>
-              <% } %>
-            <% }) %>
-          </p>
-          <div class="footer__stamps">
-            <%- await include(`@/sections/stamps`, { _, opt: { stamps: footer.stamps } }) %>
-          </div>
+    
         </div>
       </div>
-    </div>
-
+      
     <div class="footer__credits">
       <div class="p-0 w-100">
-        <div class="row align-items-center credits">
+        <div class="row align-items-center justify-content-between credits">
           <div class="col-12 col-md">
             <span>
               <small>
-                <%- footer.credits || `© ${_.store.name} / ${contacts.address} / ${contacts.doc_number}` %>
+                <%- footer.credits || `© ${_.store.name} / CNPJ: ${contacts.doc_number}` %>
               </small>
             </span>
           </div>
-          <div class="col-md-auto col-12"><%- await include('@/layout/inc/ecom-credits') %></div>
+          <div class="col-auto"><%- await include('@/layout/inc/ecom-credits') %></div>
         </div>
       </div>      
     </div>
