--- a/template/pages/@/sections/apx_banners-stripe.ejs
+++ b/template/pages/@/sections/apx_banners-stripe.ejs
@@ -1,6 +1,6 @@
 
 <% if (Array.isArray(opt.list) && opt.list.length) { %>
-<section class="apx_banners-stripe-box my-5 animate_flex_<%= opt.animation %>">
+<section class="apx_banners-stripe-box my-md-5 my-3 animate_flex_<%= opt.animation %>">
   <% for (let z = 0; z < (opt.animation ? 2 : 1); z++) { %>
   <div class="apx_banners-stripe animate_<%= opt.animation %>"
     style="--title-color:<%= opt.title_color %>;description_color:<%= opt.description_color %>;"
