--- a/template/pages/@/sections/product-block.ejs
+++ b/template/pages/@/sections/product-block.ejs
@@ -23,7 +23,7 @@ if (stamps && Array.isArray(stamps.stamps_list) && stamps.stamps_list.length) {
       </div>
 
       <div class="row">
-        <div class="col-12 col-md-6 mb-4">
+        <div class="col-12 col-md-7 mb-4 pr-md-5">
           <!-- Picture(s) gallery will be inserted dynamically within `TheProduct` -->
           <% if (_.state.pictures) { %>
             <% const imgObj = _.ecomUtils.img(_.state, null, 'big') %>
@@ -92,7 +92,13 @@ if (stamps && Array.isArray(stamps.stamps_list) && stamps.stamps_list.length) {
           <p class="product__sku">
             COD: <%= _.state.sku %>
           </p>
-
+          <hr class="my-4"></hr>
+          <% if (_.state.short_description) { %>
+            <p class="product__info mt-3 lead">
+              <%= _.state.short_description %>
+            </p>
+            <hr class="my-4"></hr>
+          <% } %>
           <div id="product-actions">
             <div id="product-loading">
               <% if (_.state.available && _.state.visible && _.ecomUtils.inStock(_.state)) { %>
@@ -179,11 +185,7 @@ if (stamps && Array.isArray(stamps.stamps_list) && stamps.stamps_list.length) {
             </div>
           </div>
 
-          <% if (_.state.short_description) { %>
-            <p class="product__info mt-3 lead">
-              <%= _.state.short_description %>
-            </p>
-          <% } %>
+          
         </div>
       </div>
 
