--- a/template/scss/custom-css/_styles.scss
+++ b/template/scss/custom-css/_styles.scss
@@ -1714,27 +1714,27 @@ ul.app_contacts{
   }
 }
 
-#login-modal{
-  .card-header{
-    background:#fff;
-    font-weight: bold;
-    font-family: "Coniferous";
-    font-size: var(--h4);
-    button{
-      // background-image: url('../../public/assets/cross-circle.svg');
-      height: 24px;
-      width: 24px;
-      margin: 5px 0;
-      span{display: none;}
-    }
-  }
-  .card-body{
-    button{
-      border-radius: 50px;
-      border: 2px solid #000;
-    }
-  }
-}
+// #login-modal{
+//   .card-header{
+//     background:#fff;
+//     font-weight: bold;
+//     font-family: "Coniferous";
+//     font-size: var(--h4);
+//     button{
+//       // background-image: url('../../public/assets/cross-circle.svg');
+//       height: 24px;
+//       width: 24px;
+//       margin: 5px 0;
+//       span{display: none;}
+//     }
+//   }
+//   .card-body{
+//     button{
+//       border-radius: 50px;
+//       border: 2px solid #000;
+//     }
+//   }
+// }
 
 .apx_tags{
   position: relative;
