--- a/template/pages/@/layout/header.ejs
+++ b/template/pages/@/layout/header.ejs
@@ -151,7 +151,7 @@ const hasAllDepartments = header.menu_all_departments
 
       <div class="order-lg-last col-auto p-0 header__buttons-block">
         <div
-          class="header__buttons"
+          class="header__buttons d-flex"
           role="group"
           aria-label="<%= _.dictionary('myAccount') %>"
         >
@@ -171,18 +171,34 @@ const hasAllDepartments = header.menu_all_departments
             </i>
           </button>
 
-          <a
+          <a href="" class="d-md-flex d-none align-items-center ml-4  btn-promo">
+            <div class="svg-ico"><img src="/img/uploads/aviso__.svg"/></div>
+            <span class="d-block ml-2">Novidades</span>
+          </a>
+          <a href="" class="d-md-flex d-none align-items-center mx-4 btn-promo">
+            <div class="svg-ico"><img src="/img/uploads/tag__.svg"/></div>
+            <span class="d-block ml-2">Promoções</span>
+          </a>
+          <div
             id="user-button"
-            class="btn btn-lg"
+            class="btn btn-lg d-none d-sm-flex mr-2"
             role="button"
             href="/app/#/account/"
             title="<%= _.dictionary('myAccount') %>"
           >
-            
-            <i class="svg-ico">
+            <i class="svg-ico mr-2">
               <img src="/img/uploads/oi-user.svg"/>
             </i>
-          </a>
+            <div class="d-flex flex-column">
+              <div>Olá, <span data-username>Visitante</span></div>
+              <div data-isLogged>
+                <a href="/app/#/account/">Minha conta</a> ou <a id="logout" onclick="window.logout()" href="#">sair</a>
+              </div>
+              <div data-isNotLogged>
+                <a href="/app/#/account/">Entre</a> ou <a href="/app/#/account/">cadastre-se</a>
+              </div>
+            </div>
+          </div>
           <a
             id="cart-button"
             class="btn btn-lg"
@@ -212,7 +228,7 @@ const hasAllDepartments = header.menu_all_departments
       </div>
 
       <% if (header.search_input) {
-        const searchColSize = !isCategoriesNavFull && categories.length ? '-3' : ''
+        const searchColSize = !isCategoriesNavFull && categories.length ? '-2' : ''
         %>
         <div
           class="d-none d-lg-block col-12 col-lg<%= searchColSize %> collapse show"
