--- a/template/pages/@/layout/header.ejs
+++ b/template/pages/@/layout/header.ejs
@@ -171,11 +171,11 @@ const hasAllDepartments = header.menu_all_departments
             </i>
           </button>
 
-          <a href="" class="d-md-flex d-none align-items-center ml-4  btn-promo">
+          <a href="/lancamentos" class="d-md-flex d-none align-items-center ml-4  btn-promo">
             <div class="svg-ico"><img src="/img/uploads/aviso__.svg"/></div>
             <span class="d-block ml-2">Novidades</span>
           </a>
-          <a href="" class="d-md-flex d-none align-items-center mx-4 btn-promo">
+          <a href="/promocoes" class="d-md-flex d-none align-items-center mx-4 btn-promo">
             <div class="svg-ico"><img src="/img/uploads/tag__.svg"/></div>
             <span class="d-block ml-2">Promoções</span>
           </a>
