--- a/template/pages/@/sections/product-specifications.ejs
+++ b/template/pages/@/sections/product-specifications.ejs
@@ -1,4 +1,4 @@
-<% if (_.state.specifications) { %>
+<% if (_.state.specifications && _.state.specifications.length > 0) { %>
   <section id="product-specs" class="product-specs my-4 my-lg-5">
     <div class="container">
       <p class="lead">
